# cogniStruct

./: Cargo.toml  README.md  package-lock.json  package.json
docs/: SPEC-FRONTEND.md  SPEC.md  designv1.md
docs/designs/: design-more.md  designv2.md  designv3.md
docs/focus-sysem/: FOCUS_SYSTEM.md
docs/theme-system/: ACCEPTANCE_REPORT.md  DELIVERABLES_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_DELIVERY_SUMMARY.md  THEME_QUICK_REFERENCE.md  THEME_SYSTEM.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/obsidian/: frontmatter.rs  links.rs  mod.rs  parser.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/dcom/: mod.rs  object.rs  property.rs  serialization.rs
src-tauri/src/sync/: mod.rs  parser.rs  watcher.rs
src/components/: DCOMInfoCard.css  DCOMInfoCard.tsx  Editor.css  Editor.tsx  FileTree.css  FileTree.tsx  GraphView.css  GraphView.tsx  MainLayout.css  MainLayout.tsx  SearchBar.css  SearchBar.tsx  Settings.css  Settings.tsx
src/components/layout/: AppLayout.css  AppLayout.tsx  DockLayout.css  DockLayout.tsx  Sidebar.css  Sidebar.tsx  index.ts
src/stores/: appStore.ts  settingsStore.ts
src/styles/: theme.css
test-vault/: Daily Notes.md  Index.md  Meeting Notes.md  Project A.md  Project B.md
test-vault/subfolder/: Nested Note.md
