[package]
name = "cognistruct"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cognistruct_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify-debouncer-full = "0.4"
anyhow = "1"
walkdir = "2"
cozo = { version = "0.7", features = ["storage-sqlite"] }
pulldown-cmark = "0.11"
regex = "1"
uuid = { version = "1", features = ["v4"] }
rayon = "=1.10.0"
graph_builder = "=0.3.0"
